Fixes around the website
Added correct links, changed header logo to better resolution one, fixed few other small things

--- a/index.html
+++ b/index.html
@@ -58,12 +58,20 @@
         <p>Partners & Infrastructure Providers</p>
         <div class="partner-img-wrapper">
             <div class="partners-first-line-img">
-                <img src="img/polygon-logo-black.png" alt="Polygon logo" class="partner-logo polygon-logo">
-                <img src="img/chainlink-logo-black.png" alt="Chainlink logo" class="partner-logo chainlink-logo">
+                <a href="https://www.polygon.technology/" target="_blank">
+                    <img src="img/polygon-logo-black.png" alt="Polygon logo" class="partner-logo polygon-logo">
+                </a>
+                <a href="https://chain.link/" target="_blank">
+                    <img src="img/chainlink-logo-black.png" alt="Chainlink logo" class="partner-logo chainlink-logo">
+                </a>
             </div>
             <div class="partners-second-line-img">
-                <img src="img/shima.png" alt="Shima Capital logo" class="partner-logo shima-logo">
-                <img src="img/Albo-logo.png" alt="Albo Climate Logo" class="partner-logo albo-logo">
+                <a href="https://www.shima.capital" target="_blank">
+                    <img src="img/shima.png" alt="Shima Capital logo" class="partner-logo shima-logo">
+                </a>
+                <a href="https://www.albosys.com/" target="_blank">
+                    <img src="img/Albo-logo.png" alt="Albo Climate Logo" class="partner-logo albo-logo">
+                </a>
             </div>
         </div>
     </div>
@@ -127,14 +135,14 @@
             </div>
         </div>
         <div class="product-btn-container">
-            <a class="product-section-btn" href="#">Download Litepaper</a>
+            <a class="product-section-btn" href="https://drive.google.com/file/d/1O5bJn9UNyzNCAA9JNWXOANeJnK5nCg1_/view?usp=drive_link" target="_blank">Download Litepaper</a>
         </div>
     </div>
 
     <div class="join-twitter-section-wrapper">
         <div class="join-twitter-section">
             <p>Join SUMA Insider on Twitter to receive daily tips and news on making your business more sustainable and successful</p>
-            <a href="#">Follow us on Twitter</a> 
+            <a href="https://twitter.com/sumainsider" target="_blank">Follow us on Twitter</a> 
         </div>
     </div>
 
@@ -151,7 +159,7 @@
             </div>
         </div>
         <div class="copyright-company-container">
-            <p>Likvidi Technologies Ltd. © 2023<br>info@likvidi.com</p>
+            <p>Likvidi Technologies Ltd. © 2023<br><a href="mailto:info@likvidi.com">info@likvidi.com</a></p>
         </div>
     </footer>
 
