--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="SUMA | Sustainability-as-a-Service Platform" />
+    <meta property="og:description" content="SUMA is a sustainability management platform, designed specifically for tech and blockchain companies. We assist these companies and ecosystems in their journey towards achieving net-zero emissions and carbon neutrality." />
+    <meta property="og:image" content="https://sumaprotocol.com/img/suma_og_image.png" />
+    <meta property="og:url" content="https://sumaprotocol.com/"/>
+    <meta property="og:type" content="website"/>
     
 </head>
 <body>
