--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <meta property="og:image" content="https://sumaprotocol.com/img/suma_og_image.png" />
     <meta property="og:url" content="https://sumaprotocol.com/"/>
     <meta property="og:type" content="website"/>
+
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139764545.js"></script>
+    <!-- End of HubSpot Embed Code -->
     
 </head>
 <body>
