--- a/home.html
+++ b/home.html
@@ -219,19 +219,19 @@
 
             <div class="who-is-suma-for-containers-wrapper">
                 <div class="suma-for-container">
-                    <img src="img/blockchain-icon.png" alt="blockchain icon" class="who-is-suma-icon">
+                    <img src="assets/img/blockchain-icon.png" alt="blockchain icon" class="who-is-suma-icon">
                     <p class="suma-for-subtitle">Web3 companies</p>
                     <p class="suma-for-body-text">Lead in sustainable blockchain with SUMA. Calculate, offset, and neutralize your carbon footprint, invite your whole ecosystem and gain advantage in the Web3 space.</p>
                 </div>
 
                 <div class="suma-for-container">
-                    <img src="img/tech-icon.png" alt="blockchain icon" class="who-is-suma-icon">
+                    <img src="assets/img/tech-icon.png" alt="blockchain icon" class="who-is-suma-icon">
                     <p class="suma-for-subtitle">Tech companies</p>
                     <p class="suma-for-body-text">Act now on climate initiatives with SUMA. Determine your carbon footprint, get decarbonization advice, and spearhead sustainable tech practices.</p>
                 </div>
 
                 <div class="suma-for-container">
-                    <img src="img/funds-icon.png" alt="blockchain icon" class="who-is-suma-icon">
+                    <img src="assets/img/funds-icon.png" alt="blockchain icon" class="who-is-suma-icon">
                     <p class="suma-for-subtitle">VC funds</p>
                     <p class="suma-for-body-text">Guide your portfolio towards sustainable transitions with SUMA. Comply with regulations, offset carbon emissions, and create ESG reports, making climate commitment a competitive advantage.</p>
                 </div>
@@ -262,13 +262,13 @@
 
     <footer>
         <div class="footer-wrapper">
-            <img src="img/suma-logo-footer.png" alt="SUMA logo" class="footer-suma-logo">
+            <img src="assets/img/suma-logo-footer.png" alt="SUMA logo" class="footer-suma-logo">
             <div class="social-links-footer">
                 <a href="https://www.linkedin.com/company/51593340" target="_blank">
-                    <img src="img/linkedin-logo-footer.png" alt="Linkedin icon">
+                    <img src="assets/img/linkedin-logo-footer.png" alt="Linkedin icon">
                 </a>
                 <a href="https://twitter.com/sumainsider" target="_blank">
-                    <img src="img/twitter-logo-footer.png" alt="Twitter icon">
+                    <img src="assets/img/twitter-logo-footer.png" alt="Twitter icon">
                 </a>
             </div>
         </div>
