--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div id="nav-links-desktop-wrapper">
                 <a href="index.html" class="desktop-nav-link current-page">Home</a>
-                <a href="documents.html" class="desktop-nav-link">Documents</a>
+                <a href="documents/documents.html" class="desktop-nav-link">Documents</a>
             </div>
     
             <div id="icon-wrapper" style="position: relative;">
