--- a/documents/documents.html
+++ b/documents/documents.html
@@ -134,7 +134,7 @@
 
     <footer>
         <div class="footer-wrapper">
-            <img src="img/suma-logo-footer.png" alt="SUMA logo" class="footer-suma-logo">
+            <img src="../assets/img/suma-logo-footer.png" alt="SUMA logo" class="footer-suma-logo">
             <div class="social-links-footer">
                 <a href="https://www.linkedin.com/company/51593340" target="_blank">
                     <img src="../assets/img/linkedin-logo-footer.png" alt="Linkedin icon">
