--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
     <!-- FOOTER ENDS
     ------------------------------------------- -->
 
-    <script src="../js/script.js"></script>
-    
+    <script src="https://sumaprotocol.com/js/script.js"></script>
+
     <!-- Start of HubSpot Embed Code -->
     <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139764545.js"></script>
     <!-- End of HubSpot Embed Code -->
