--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
         </div>
         <div class="product-btn-container">
-            <a class="product-section-btn" href="documents.html" target="_blank">More about SUMA</a>
+            <a class="product-section-btn" href="/documents/documents.html" target="_blank">More about SUMA</a>
         </div>
     </div>
 
