--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <!-- FOOTER ENDS
     ------------------------------------------- -->
 
-    <script src="js/script.js"></script>
+    <script src="main.js"></script>
 
     <!-- Start of HubSpot Embed Code -->
     <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139764545.js"></script>
