--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
         <div id="nav-links-mobile" class="nav-links-mobile">
             <a href="index.html" class="nav-link mobile-link">Home</a>
-            <a href="documents.html" class="nav-link mobile-link">Documents</a>
+            <a href="documents/documents.html" class="nav-link mobile-link">Documents</a>
         </div>
     
         <img src="../assets/img/suma-logo.png" alt="SUMA logo" class="suma-logo">
