--- a/documents/documents.html
+++ b/documents/documents.html
@@ -152,7 +152,7 @@
     <!-- FOOTER ENDS
     ------------------------------------------- -->
 
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 
 </body>
 </html>
