--- a/documents/documents.html
+++ b/documents/documents.html
@@ -24,8 +24,8 @@
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicons_suma/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons_suma/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons_suma/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicons_suma/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicons_suma/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -74,7 +74,7 @@
                     <h3>SUMA Litepaper</h3>
                     <h1>SUMA and the future of sustainability management</h1>
                     <p>Our litepaper outlines the functions and mechanisms of the SUMA platform. Discover how SUMA redefines Sustainability Management.</p>
-                    <a class="hero-section-btn-docs" href="https://drive.google.com/file/d/1O5bJn9UNyzNCAA9JNWXOANeJnK5nCg1_/view?usp=drive_link" target="_blank">Read the Litepaper</a>
+                    <a class="hero-section-btn-docs" href="https://drive.google.com/file/d/1Flal-T3Fd4uusN0Wzyth9PXy9f4Py7Qh/view?usp=sharing" target="_blank">Read the Litepaper</a>
                 </div>
                 <div class="hero-section-img-docs">
                     <img class="litepaper-image" src="../assets/img/litepaper-img.png" alt="litepaper image">
