--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 Our platform empowers businesses in calculating their carbon footprints, decarbonizing their activities, and ensuring effortless compliance with the latest regulations. In addition, we facilitate carbon offsetting with carbon credits that actively remove carbon from the atmosphere. Reach net-zero with us.</p>
                 <button id="saasBtn">Get launch updates</button>
             </div>
-            <img src="../assets/img/saas-section-img.png" alt="jungle image" class="image-large-screen">
+            <img src="../assets/img/honeycomb-bees.png" alt="bee image" class="image-large-screen">
         </div>
     </div>
 
