added Google Analytics events

--- a/documents/documents.html
+++ b/documents/documents.html
@@ -74,7 +74,7 @@
                     <h3>SUMA Litepaper</h3>
                     <h1>SUMA and the future of sustainability management</h1>
                     <p>Our litepaper outlines the functions and mechanisms of the SUMA platform. Discover how SUMA redefines Sustainability Management.</p>
-                    <a class="hero-section-btn-docs" href="https://drive.google.com/file/d/1Flal-T3Fd4uusN0Wzyth9PXy9f4Py7Qh/view?usp=sharing" target="_blank">Read the Litepaper</a>
+                    <a class="hero-section-btn-docs" href="https://drive.google.com/file/d/1Flal-T3Fd4uusN0Wzyth9PXy9f4Py7Qh/view?usp=sharing" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Button', 'event_label': 'Read the Litepaper'});">Read the Litepaper</a>
                 </div>
                 <div class="hero-section-img-docs">
                     <img class="litepaper-image" src="../assets/img/litepaper-img.png" alt="litepaper image">
@@ -93,7 +93,7 @@
                 <h3>suma token economics</h3>
                 <h1>SUMA token launching soon on Polygon blockchain</h1>
                 <p>Our litepaper outlines the functions and mechanisms of the SUMA platform. Discover how SUMA redefines Sustainability Management.</p>
-                <a class="hero-section-btn-docs token-economics-btn" href="https://drive.google.com/file/d/1fROrnhSX_MUqieUlT9WkKDTSFT94uAGo/view?usp=sharing" target="_blank">Read the Token Economics</a>
+                <a class="hero-section-btn-docs token-economics-btn" href="https://drive.google.com/file/d/1fROrnhSX_MUqieUlT9WkKDTSFT94uAGo/view?usp=sharing" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Button', 'event_label': 'Read the Token Economics'});">Read the Token Economics</a>
             </div>
             <div class="token-economics-img">
                 <img class="token-economics-image" src="../assets/img/sumatoken-img.png" alt="suma token image">
