Update meta tags

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="SUMA | Sustainability-as-a-Service Platform" />
     <meta property="og:description" content="SUMA is a sustainability management platform, designed specifically for tech and blockchain companies. We assist these companies and ecosystems in their journey towards achieving net-zero emissions and carbon neutrality." />
-    <meta property="og:image" content="https://sumaprotocol.com/img/suma_og_image.png" />
+    <meta property="og:image" content="https://sumaprotocol.com/assets/img/suma_og_image.png" />
     <meta property="og:url" content="https://sumaprotocol.com/"/>
     <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="SUMA" />
 
     
 </head>
