--- a/documents/documents.html
+++ b/documents/documents.html
@@ -93,8 +93,8 @@
             <div class="token-section-content">
                 <h3>suma token economics</h3>
                 <h1>SUMA token launching soon on Polygon blockchain</h1>
-                <p>Our litepaper outlines the functions and mechanisms of the SUMA platform. Discover how SUMA redefines Sustainability Management.</p>
-                <a class="hero-section-btn-docs token-economics-btn" href="https://drive.google.com/file/d/1fROrnhSX_MUqieUlT9WkKDTSFT94uAGo/view?usp=sharing" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Button', 'event_label': 'Read the Token Economics'});">Read the Token Economics</a>
+                <p>SUMA Token is the native utility token of the SUMA platform. Read more about how the token is used within the platform. </p>
+                <a class="hero-section-btn-docs token-economics-btn" href="https://drive.google.com/file/d/1UhuRRnY-dMQFGNPOjzMWsveL7MqMjCVr/view?usp=drive_link" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Button', 'event_label': 'Read the Token Economics'});">Read the Token Economics</a>
             </div>
             <div class="token-economics-img">
                 <img class="token-economics-image" src="../assets/img/sumatoken-img.png" alt="suma token image">
