--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="saas-section-text-btn">
                 <h2><span>Sustainability</span>-as-a-Service</h2>
                 <p>SUMA Platform is a sustainability-focused Software-as-a-Service (SaaS) solution, designed to assist businesses and ecosystems towards net-zero emissions.<br><br>
-                Our platform empowers businesses in calculating their carbon footprints, decarbonizing their activities, and ensuring effortless compliance with the latest regulations. In addition, we facilitate carbon offsetting with carbon credits that actively remove carbon from the atmosphere. Reach net-zero with us.</p>
+                    Our platform empowers tech startups, growth companies, VC funds and blockchain ecosystems in calculating their carbon footprints, decarbonizing their activities, and ensuring effortless compliance with the latest regulations. In addition, we facilitate carbon offsetting with carbon credit portfolios that remove carbon from the atmosphere. Reach net-zero with us.</p>
                 <button id="saasBtn">Get launch updates</button>
             </div>
             <img src="../assets/img/honeycomb-bees.png" alt="bee image" class="image-large-screen">
