--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="product-section-content">
                     <p class="section-number">03</p>
                     <h3 class="product-section-title">
-                        Carbon Accounting & Carbon Footprint Report
+                        Net-zero Certification & Sustainability Reporting
                     </h3>
                     <p class="product-section-body-text">
                         Achieve and display the Proof-of-Netzero Certification, a validation of your commitment to environmental sustainability.<br><br>Over the coming years, Corporate Sustainability Reporting will become mandatory for approximately 1.6 million companies in the EU, and millions more around the world will adopt the reporting as a good corporate practice.
