--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
             <div class="who-is-suma-for-title-body">
                 <h2>Who is <span>SUMA</span> for?</h2>
-                <p>SUMA helps you to measure, manage and offset your CO2 emissions effectively. Our platform offers tailored solutions for sustianable transition, making climate commitment not only a possibility, but a competitive advantage.
+                <p>SUMA helps you to measure, manage and offset your CO2 emissions effectively. Our platform offers tailored solutions for sustainable transition, making climate commitment not only a possibility, but a competitive advantage.
                 </p>
             </div>
 
