--- a/documents/documents.html
+++ b/documents/documents.html
@@ -54,6 +54,7 @@
             <div id="nav-links-desktop-wrapper" class="docs-page-nav-links">
                 <a href="../index.html" class="desktop-nav-link">Home</a>
                 <a href="documents.html" class="desktop-nav-link current-page">Documents</a>
+                <a href="https://blog.sumaprotocol.com/" class="desktop-nav-link" target="_blank">Blog</a>
             </div>
     
             <div id="icon-wrapper" style="position: relative;">
@@ -65,6 +66,7 @@
         <div id="nav-links-mobile" class="nav-links-mobile">
             <a href="../index.html" class="nav-link mobile-link">Home</a>
             <a href="documents.html" class="nav-link mobile-link">Documents</a>
+            <a href="https://blog.sumaprotocol.com/" class="nav-link mobile-link">Blog</a>
         </div>
 
         
