--- a/documents.html
+++ b/documents.html
@@ -53,6 +53,7 @@
             
             <div id="nav-links-desktop-wrapper" class="docs-page-nav-links">
                 <a href="../index.html" class="desktop-nav-link">Home</a>
+                <a href="suma-for-funds.html" class="desktop-nav-link current-page">SUMA for Funds</a>
                 <a href="documents.html" class="desktop-nav-link current-page">Documents</a>
                 <a href="https://blog.sumaprotocol.com/" class="desktop-nav-link" target="_blank">Blog</a>
             </div>
@@ -65,6 +66,7 @@
     
         <div id="nav-links-mobile" class="nav-links-mobile">
             <a href="../index.html" class="nav-link mobile-link">Home</a>
+            <a href="suma-for-funds.html" class="nav-link mobile-link">SUMA for Funds</a>
             <a href="documents.html" class="nav-link mobile-link">Documents</a>
             <a href="https://blog.sumaprotocol.com/" class="nav-link mobile-link">Blog</a>
         </div>
@@ -139,7 +141,7 @@
         <div class="footer-wrapper">
             <img src="../assets/img/suma-logo-footer.png" alt="SUMA logo" class="footer-suma-logo">
             <div class="social-links-footer">
-                <a href="https://www.linkedin.com/company/51593340" target="_blank">
+                <a href="https://fi.linkedin.com/company/suma-ai" target="_blank">
                     <img src="../assets/img/linkedin-logo-footer.png" alt="Linkedin icon">
                 </a>
                 <a href="https://twitter.com/sumainsider" target="_blank">
