--- a/documents.html
+++ b/documents.html
@@ -139,19 +139,41 @@
 
     <footer>
         <div class="footer-wrapper">
-            <img src="../assets/img/suma-logo-footer.png" alt="SUMA logo" class="footer-suma-logo">
-            <div class="social-links-footer">
-                <a href="https://fi.linkedin.com/company/suma-ai" target="_blank">
-                    <img src="../assets/img/linkedin-logo-footer.png" alt="Linkedin icon">
-                </a>
-                <a href="https://twitter.com/sumainsider" target="_blank">
-                    <img src="../assets/img/twitter-logo-footer.png" alt="Twitter icon">
-                </a>
+            <div class="footer-logo-and-links">
+                <div class="footer-logo">
+                    <img src="assets/img/suma_logo_square.png" alt="SUMA logo" class="footer-suma-logo" class="footer-suma-logo">
+                </div>
+                <div class="footer-links">
+                    <a href="suma-for-funds.html">SUMA for Funds</a>
+                    <a href="documents.html">Documents</a>
+                    <a href="https://blog.sumaprotocol.com/" target="_blank">Blog</a>
+                </div>
             </div>
+
+            <div class="footer-social-and-email">
+
+                <div class="social-links">
+                    <a href="https://linkedin.com/company/suma-ai" target="_blank">LinkedIn</a>
+                    <a href="https://twitter.com/sumainsider" target="_blank">Twitter</a>
+                </div>
+
+                <div class="footer-email-address">
+                    <p>info@likvidi.com</p>
+                </div>
+
+            </div>
+
+            <div class="footer-bottom-section">
+                <div class="copyright-text-footer">
+                    <p>Copyright © Likvidi Technologies Ltd. 2023</p>
+                </div>
+                <div class="privacy-policy-footer">
+                    <a href="privacy.html">Privacy Policy</a>
+                </div>
+            </div>
+
         </div>
-        <div class="copyright-company-container">
-            <p>info@likvidi.com<br>Copyright © Likvidi Technologies Ltd. 2023 </p>
-        </div>
+
     </footer>
 
     <!-- FOOTER ENDS
