--- a/documents.html
+++ b/documents.html
@@ -53,7 +53,7 @@
             
             <div id="nav-links-desktop-wrapper" class="docs-page-nav-links">
                 <a href="../index.html" class="desktop-nav-link">Home</a>
-                <a href="suma-for-funds.html" class="desktop-nav-link current-page">SUMA for Funds</a>
+                <a href="suma-for-funds.html" class="desktop-nav-link">SUMA for Funds</a>
                 <a href="documents.html" class="desktop-nav-link current-page">Documents</a>
                 <a href="https://blog.sumaprotocol.com/" class="desktop-nav-link" target="_blank">Blog</a>
             </div>
