Pricing page added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <div id="nav-links-desktop-wrapper">
                 <a href="index.html" class="desktop-nav-link current-page">Home</a>
                 <a href="suma-for-funds.html" class="desktop-nav-link">SUMA for Funds</a>
+                <a href="pricing.html" class="desktop-nav-link">Pricing</a>
                 <a href="documents.html" class="desktop-nav-link">Documents</a>
                 <a href="https://blog.sumaprotocol.com/" class="desktop-nav-link" target="_blank">Blog</a>
             </div>
@@ -71,6 +72,7 @@
         <div id="nav-links-mobile" class="nav-links-mobile">
             <a href="index.html" class="nav-link mobile-link">Home</a>
             <a href="suma-for-funds.html" class="nav-link mobile-link">SUMA for Funds</a>
+            <a href="pricing.html" class="nav-link mobile-link">Pricing</a>
             <a href="documents.html" class="nav-link mobile-link">Documents</a>
             <a href="https://blog.sumaprotocol.com/" class="nav-link mobile-link">Blog</a>
         </div>
@@ -242,7 +244,7 @@
                 </div>
             </div>
             <div class="who-is-suma-for-section-btn">
-                <a href="https://forms.gle/jrKyqCMTSXfx9Ckr5" target="_blank">Contact Us</a>
+                <a href="pricing.html">See Pricing</a>
             </div>
         </div>  
     </div>
@@ -273,6 +275,7 @@
                 </div>
                 <div class="footer-links">
                     <a href="suma-for-funds.html">SUMA for Funds</a>
+                    <a href="pricing.html">Pricing</a>
                     <a href="documents.html">Documents</a>
                     <a href="https://blog.sumaprotocol.com/" target="_blank">Blog</a>
                 </div>
