--- a/privacy.html
+++ b/privacy.html
@@ -52,6 +52,7 @@
         <div id="nav-links-desktop-wrapper" class="sff-page-nav-links">
             <a href="../index.html" class="desktop-nav-link">Home</a>
             <a href="suma-for-funds.html" class="desktop-nav-link">SUMA for Funds</a>
+            <a href="pricing.html" class="desktop-nav-link">Pricing</a>
             <a href="documents.html" class="desktop-nav-link">Documents</a>
             <a href="https://blog.sumaprotocol.com/" class="desktop-nav-link" target="_blank">Blog</a>
         </div>
@@ -65,6 +66,7 @@
     <div id="nav-links-mobile" class="nav-links-mobile">
         <a href="../index.html" class="nav-link mobile-link">Home</a>
         <a href="suma-for-funds.html" class="nav-link mobile-link">SUMA for Funds</a>
+        <a href="pricing.html" class="nav-link mobile-link">Pricing</a>
         <a href="documents.html" class="nav-link mobile-link">Documents</a>
         <a href="https://blog.sumaprotocol.com/" class="nav-link mobile-link">Blog</a>
     </div>
