--- a/suma-for-funds.html
+++ b/suma-for-funds.html
@@ -53,6 +53,7 @@
             <div id="nav-links-desktop-wrapper" class="sff-page-nav-links">
                 <a href="../index.html" class="desktop-nav-link">Home</a>
                 <a href="suma-for-funds.html" class="desktop-nav-link current-page">SUMA for Funds</a>
+                <a href="pricing.html" class="desktop-nav-link">Pricing</a>
                 <a href="documents.html" class="desktop-nav-link">Documents</a>
                 <a href="https://blog.sumaprotocol.com/" class="desktop-nav-link" target="_blank">Blog</a>
             </div>
@@ -66,6 +67,7 @@
         <div id="nav-links-mobile" class="nav-links-mobile">
             <a href="../index.html" class="nav-link mobile-link">Home</a>
             <a href="suma-for-funds.html" class="nav-link mobile-link">SUMA for Funds</a>
+            <a href="pricing.html" class="nav-link mobile-link">Pricing</a>
             <a href="documents.html" class="nav-link mobile-link">Documents</a>
             <a href="https://blog.sumaprotocol.com/" class="nav-link mobile-link">Blog</a>
         </div>
@@ -228,6 +230,7 @@
                 </div>
                 <div class="footer-links">
                     <a href="suma-for-funds.html">SUMA for Funds</a>
+                    <a href="pricing.html">Pricing</a>
                     <a href="documents.html">Documents</a>
                     <a href="https://blog.sumaprotocol.com/" target="_blank">Blog</a>
                 </div>
