--- a/pricing.html
+++ b/pricing.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="pricing-bulletpoint">
                         <img class="checkmark-pricing" src="../assets/img/checkmark-green.png" alt="checkmark">
-                        <p>Create Sustainable Finance Disclosure Regulation compliant reports and share them with stakeholders</p>
+                        <p>Create <strong>Sustainable Finance Disclosure Regulation</strong> compliant reports and share them with stakeholders</p>
                     </div>
                 </div>
 
